Add Weather Underground logo to comply w/ TOS

--- a/weather.html
+++ b/weather.html
@@ -162,6 +162,7 @@ $(clock);
 <div class="container">
   <div id="time" class="row"></div>
   <div id="weather" class="row"></div>
+  <div class="row"><a href="https://wunderground.com/"><img src="wunderground-logo.png"></a></div>
   <div id="location" class="row"></div>
 </div>
 </body>
