Make the time twice as big

--- a/weather.html
+++ b/weather.html
@@ -17,6 +17,7 @@ body {
   font-size: 2rem;
 }
 #time { font-size: 3rem; }
+.time { font-size: 6rem; }
 .celsius { font-size: 1.5rem; }
 #wunderground { display: none; }
 </style>
